--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background:         
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity)) /* #111827 */;;
+    --background: #1e1e1e;
     --foreground: #ededed;
   }
 }
