colors of list improved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ ul {
   margin: 16px 0; /* Add space around the list */
   font-family: "Georgia", serif; /* A classic, elegant font */
   font-size: 1.1rem; /* Slightly larger font for better legibility */
-  color: #e7f0fd; /* Neutral dark color for text */
+  color: #323232; /* Neutral dark color for text */
 }
 
 li {
